fix console errors for browser security, adjust code readability

--- a/src/pages/movieDetail/movie.css
+++ b/src/pages/movieDetail/movie.css
@@ -132,7 +132,7 @@
 }
 
 
-.movie__productionComapany {
+.movie__productionCompany {
   width: 200px;
   margin: 2rem;
 }
